--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,7 +13,7 @@
 	width: $w;
 	&::before {
 		background-image: linear-gradient(
-			top,
+			to top,
 			rgba(250, 250, 255, 1) 0%,
 			rgba(250, 250, 255, 0.7) 10%,
 			rgba(250, 250, 255, 0) 100%
